noinst_LTLIBRARIES = libcharm@P@_crd@OMP@.la


AM_CPPFLAGS = -I$(top_srcdir)/charm


libcharm@P@_crd@OMP@_la_SOURCES = crd_point_malloc.c \
								  crd_point_calloc.c \
								  crd_point_init.c \
								  crd_point_free.c \
								  crd_point_check_inputs.c \
								  crd_point_gl.c \
								  crd_point_dh1.c \
								  crd_point_dh2.c \
								  crd_point_dh_lats_weights.c \
								  crd_cell_malloc.c \
								  crd_cell_calloc.c \
								  crd_cell_init.c \
								  crd_cell_free.c \
								  crd_cell_check_inputs.c \
								  crd_grd_check_symm.c \
								  crd_check_cells.c


EXTRA_DIST = *.h
