noinst_LTLIBRARIES = libcharm@P@_crd.la


AM_CPPFLAGS = -I$(top_srcdir)/charm


libcharm@P@_crd_la_SOURCES = crd_point_alloc.c \
							 crd_point_malloc.c \
							 crd_point_calloc.c \
							 crd_point_init.c \
							 crd_point_free.c \
							 crd_point_check_inputs.c \
							 crd_point_quad_nlat_north.c \
							 crd_point_gl_chunk.c \
							 crd_point_quad.c \
							 crd_point_quad_l.c \
							 crd_point_gl.c \
							 crd_point_gl_shape.c \
							 crd_point_dh1.c \
							 crd_point_dh2.c \
							 crd_point_dh_chunk.c \
							 crd_point_dh1_chunk.c \
							 crd_point_dh1_shape.c \
							 crd_point_dh2_chunk.c \
							 crd_point_dh2_shape.c \
							 crd_point_dh_lat_w_chunk.c \
							 crd_point_npoint.c \
							 crd_cell_alloc.c \
							 crd_cell_malloc.c \
							 crd_cell_calloc.c \
							 crd_cell_init.c \
							 crd_cell_free.c \
							 crd_cell_check_inputs.c \
							 crd_grd_check_symm.c \
							 crd_check_cells.c \
							 crd_point_isGrid.c \
							 crd_point_isCustGrid.c \
							 crd_point_isQuadGrid.c \
							 crd_point_isGLGrid.c \
							 crd_point_isDHGrid.c \
							 crd_point_isDH1Grid.c \
							 crd_point_isDH2Grid.c \
							 crd_point_isSctr.c \
							 crd_point_isEmpty.c \
							 crd_point_issymm.c \
							 crd_point_quad_equator.c \
							 crd_point_quad_get_nmax_from_nlat.c \
							 crd_point_get_local_nlat.c \
							 crd_point_get_local_nlon.c \
							 crd_point_get_local_0_start.c \
							 crd_isPoint.c \
							 crd_cell_isGrid.c \
							 crd_cell_isSctr.c \
							 crd_isCell.c \
							 crd_point_check_distribution.c


EXTRA_DIST = *.h
