noinst_LTLIBRARIES = libcharm@P@_err.la


AM_CPPFLAGS = -I$(top_srcdir)/charm


libcharm@P@_err_la_SOURCES = err_init.c \
							 err_free.c \
							 err_reset.c \
							 err_set.c \
							 err_handler.c \
							 err_isempty.c \
							 err_propagate.c \
							 err_inc_level.c


EXTRA_DIST = *.h
