noinst_LTLIBRARIES = libcharm@P@_integ.la


AM_CPPFLAGS = -I$(top_srcdir)/charm


libcharm@P@_integ_la_SOURCES = integ_cc.c \
							   integ_ccs.c \
							   integ_cs.c \
							   integ_css.c \
							   integ_pn1m1pn2m2.c \
							   integ_sc.c \
							   integ_scs.c \
							   integ_ss.c \
							   integ_sss.c \
							   integ_yi1n1m1yi2n2m2.c


EXTRA_DIST = *.h
