noinst_LTLIBRARIES = libcharm@P@_leg@OMP@.la


AM_CPPFLAGS = -I$(top_srcdir)/charm


libcharm@P@_leg@OMP@_la_SOURCES = leg_func_anm_bnm.c \
								  leg_func_dm.c \
								  leg_func_gm_hm.c \
								  leg_func_prepare.c \
								  leg_func_r_ri.c \
								  leg_pnmj_coeffs.c \
								  leg_pnmj_dpeven.c \
								  leg_pnmj_dpodd.c \
								  leg_pnmj_gpeven.c \
								  leg_pnmj_gpodd.c \
								  leg_pnmj_alloc.c \
								  leg_pnmj_calloc.c \
								  leg_pnmj_malloc.c \
								  leg_pnmj_init.c \
								  leg_pnmj_free.c \
								  leg_pnmj_length.c \
								  leg_pnmj_j2k.c \
								  leg_pnmj_k2j.c \
								  leg_pnmj_leq4.c \
								  leg_pol_en_fn.c


EXTRA_DIST = *.h
