noinst_LTLIBRARIES = libcharm@P@_misc@OMP@.la


AM_CPPFLAGS = -I$(top_srcdir)/charm


libcharm@P@_misc@OMP@_la_SOURCES = misc_arr_chck_lin_incr.c \
								   misc_arr_chck_symm.c \
								   misc_arr_max.c \
								   misc_arr_mean.c \
								   misc_arr_min.c \
								   misc_arr_std.c \
								   misc_arr_rms.c \
								   misc_is_nearly_equal.c \
								   misc_fprintf_real.c \
								   misc_print_version.c \
								   misc_str2ul.c \
								   misc_str2real.c \
								   misc_calloc.c


EXTRA_DIST = *.h
