noinst_LTLIBRARIES = libcharm@P@_misc@OMP@.la


AM_CPPFLAGS = -I$(top_srcdir)/charm


libcharm@P@_misc@OMP@_la_SOURCES = misc_arr_chck_lin_incr.c \
								   misc_arr_chck_symm.c \
								   misc_arr_max.c \
								   misc_arr_mean.c \
								   misc_arr_min.c \
								   misc_arr_std.c \
								   misc_arr_rms.c \
								   misc_is_nearly_equal.c \
								   misc_fprintf_real.c \
								   misc_print_info.c \
								   misc_get_version.c \
								   misc_str2ul.c \
								   misc_str2real.c \
								   misc_calloc.c \
								   misc_polar_optimization_apply.c \
								   misc_polar_optimization_threshold.c \
								   misc_buildopt_precision.c \
								   misc_buildopt_omp_charm.c \
								   misc_buildopt_omp_fftw.c \
								   misc_buildopt_simd.c \
								   misc_buildopt_isfinite.c \
								   misc_buildopt_version_fftw.c


EXTRA_DIST = *.h
