noinst_LTLIBRARIES = libcharm@P@_shc@OMP@.la


AM_CPPFLAGS = -I$(top_srcdir)/charm


libcharm@P@_shc@OMP@_la_SOURCES = shc_da.c \
								  shc_dda.c \
								  shc_ddv.c \
								  shc_dv.c \
								  shc_init.c \
								  shc_free.c \
								  shc_read_bin.c \
								  shc_read_mtx.c \
								  shc_read_tbl.c \
								  shc_read_gfc.c \
								  shc_read_mtdt.c \
								  shc_read_line.c \
								  shc_write_bin.c \
								  shc_write_mtx.c \
								  shc_write_tbl.c \
								  shc_write_mtdt.c \
								  shc_rescale.c \
								  shc_reset_coeffs.c


EXTRA_DIST = *.h
